--- a/spanner-library/src/main/AndroidManifest.xml
+++ b/spanner-library/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="dk.ilios.caliperx">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="dk.ilios.spanner">
 
     <application android:allowBackup="true" android:label="@string/app_name" android:supportsRtl="true">
 
