Support for CustomMeasurements.

--- a/spanner-library/src/main/resources/global-config.properties
+++ b/spanner-library/src/main/resources/global-config.properties
@@ -62,7 +62,7 @@ instrument.runtime.options.suggestGranularity=true
 
 # Instrument "arbitrary"
 # dk.ilios.spannerx.internal.CustomMeasurementInstrument
-instrument.arbitrary.class=
+instrument.arbitrary.class=dk.ilios.spanner.internal.CustomMeasurementInstrument
 
 # Run GC before every measurement?
 instrument.arbitrary.options.gcBeforeEach=false
