--- a/spanner-library/build.gradle
+++ b/spanner-library/build.gradle
@@ -35,6 +35,7 @@ android {
         unitTests.returnDefaultValues = true // Mock Android framework methods/clases
         unitTests.all {
             exclude 'dk/ilios/spanner/benchmarks/**'
+            maxHeapSize = "1g"
         }
     }
 }
