--- a/caliper/pom.xml
+++ b/caliper/pom.xml
@@ -123,6 +123,19 @@
           <show>public</show>
         </configuration>
       </plugin>
+    <plugin>
+      <artifactId>maven-assembly-plugin</artifactId>
+      <configuration>
+        <archive>
+          <manifest>
+            <mainClass>com.google.caliper.Runner</mainClass>
+          </manifest>
+        </archive>
+        <descriptorRefs>
+          <descriptorRef>jar-with-dependencies</descriptorRef>
+        </descriptorRefs>
+      </configuration>
+    </plugin>
     </plugins>
   </build>
   <developers>
