--- a/caliper/pom.xml
+++ b/caliper/pom.xml
@@ -101,12 +101,12 @@
     <dependency>
       <groupId>com.google.dagger</groupId>
       <artifactId>dagger</artifactId>
-      <version>2.1-SNAPSHOT</version>
+      <version>2.2</version>
     </dependency>
     <dependency>
       <groupId>com.google.dagger</groupId>
       <artifactId>dagger-compiler</artifactId>
-      <version>2.1-SNAPSHOT</version>
+      <version>2.2</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
@@ -211,6 +211,20 @@
           <show>public</show>
         </configuration>
       </plugin>
+      <plugin>
+      <artifactId>maven-assembly-plugin</artifactId>
+      <configuration>
+        <archive>
+          <manifest>
+            <mainClass>com.google.caliper.Runner</mainClass>
+          </manifest>
+        </archive>
+        <descriptorRefs>
+          <descriptorRef>jar-with-dependencies</descriptorRef>
+        </descriptorRefs>
+      </configuration>
+    </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
