--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,10 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0-beta2'
+        classpath 'com.android.tools.build:gradle:2.1.0-rc1'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:3.1.1'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
+        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.0.1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6'
         classpath 'ch.netzwerg:gradle-release-plugin:1.1.0'
         classpath 'com.netflix.nebula:gradle-extra-configurations-plugin:3.0.3'
     }
